PrivateRoutingTable.tf
resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block     = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.nat.id
  }
}
resource "aws_route_table_association" "private1" {

  subnet_id      = aws_subnet.private_az1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private2" {

  subnet_id      = aws_subnet.private_az2.id
  route_table_id = aws_route_table.private.id
}
